<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money Flow</string>
    <string name="exit">Exit</string>
    <string name="user_avatar">Аватар пользователя</string>
    <string name="erase_button">Erase symbol</string>
    <string name="fingerprint_button">Fingerprint</string>
    <string name="authentication_error_message">Authentication error: %1$s</string>
    <string name="authentication_succeeded_message">Authentication successful!</string>
    <string name="authentication_failed_message">Authentication failed</string>
    <string name="auth_title">Authentication to app</string>
    <string name="auth_negative_button_text">Type password</string>
    <string name="username">User name</string>
    <string name="wallet">Wallet: %s</string>
    <string name="balance">Total balance</string>
    <string name="all_expenses">Expenses</string>
    <string name="current_month">In %s</string>
    <string name="all_incomes">Incomes</string>
    <string name="exact_alarm_permission_required">Для напоминаний нужно разрешение на точные уведомления. Пожалуйста, включите его в настройках.</string>
    <string name="add_transaction">Add transaction</string>
    <string name="available_wallets">Available wallets</string>
    <string name="wallet_icon">Wallet icon</string>
    <string name="home">Home</string>
    <string name="planning">Planning</string>
    <string name="settings">Settings</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="theme_system_default">System</string>
    <string name="sum">Sum</string>
    <string name="comment">Comment</string>
    <string name="period">Period: %s - %s</string>
    <string name="transaction_history">Transaction history</string>
    <string name="Theme">Theme</string>
    <string name="currency">Currency</string>
    <string name="change_pin">Change PIN-code</string>
    <string name="notifications_settings">Notification settings</string>
    <string name="change_wallet">Change wallet</string>
    <string name="name">Name</string>
    <string name="category_create_title">Create a category</string>
    <string name="edit_category">Edit a category</string>
    <string name="category_edit_title">Editing a category</string>
    <string name="icon">Icon</string>
    <string name="new_name">New name</string>
    <string name="delete_category">Delete a category</string>
    <string name="save">Save</string>
    <string name="category_delete_confirmation_alert">Deleting a category will also delete all transactions associated with it from all wallets. Are you sure?</string>
    <string name="removal">Removal</string>
    <string name="remove">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="current_wallet">Selected wallet</string>
    <string name="all_wallets">All wallets</string>
    <string name="wallet_edit_title">Editing a wallet</string>
    <string name="transaction_edit_title">Edititing a transaction</string>
    <string name="choose_all">Select all</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="comment_s">Comment: %s</string>
    <string name="setup_pin_title">Set a PIN code for authorization</string>
    <string name="next_payment">Next payment: %1$s</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="confirm_pin_title">Confirm PIN code</string>
    <string name="enter_pin_title">Enter PIN code</string>
    <string name="enter_old_pin">Enter the old PIN code</string>
    <string name="enter_new_pin">Enter new PIN code</string>
    <string name="confirm_new_pin_title">Confirm new PIN code</string>
    <string name="pin_changed_successfully">PIN code changed successfully</string>
    <string name="incorrect_old_pin">Неверный старый PIN-код</string>
    <string name="pins_dont_match">PIN codes do not match</string>
    <string name="pin_codes_dont_match">Incorrect PIN code</string>
    <string name="bell_on">Notification off</string>
    <string name="main_title">Financial review</string>
    <string name="notification">Notification</string>
    <string name="daily_notifications">Plans notifications</string>
    <string name="transaction_add_notifications">Transaction add notifications</string>
    <string name="create_regular_expense">Create plan</string>
    <string name="month_hint">What date of each month send the payment notification?</string>
    <string name="number">Day</string>
    <string name="edit_regular_expense">Editing plan</string>
    <string name="date_s">Date: %s</string>
    <string name="new_sum">New sum</string>
    <string name="new_comment">New comment</string>
    <string name="choose">"   Pick"</string>
    <string name="period_not_chosen">Period not selected</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="categories_list">Categories list</string>
    <string name="balance_standard">Balance</string>
    <string name="new_wallet_creating">Creating new wallet</string>
    <string name="category_icon">Category icon</string>
    <string name="go_to_transaction_list">Go to transaction history</string>
    <string name="expense_planning">Planning</string>
    <string name="month_expenses">Monthly expenses</string>
    <string name="planned_expenses">Planned expenses</string>
    <string name="bank_icon">Wallet icon</string>
    <string name="bell_off">Notification is off</string>
    <string name="payment_notification_text">Make a payment for %s in the amount of %s</string>
    <string name="daily_transactions_add_notification_text">Do not forget to enter your purchases for today</string>
    <string name="add">Add</string>
    <string name="create_new_plan">Create a new plan</string>
    <string name="empty"><![CDATA[<empty>]]></string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="remove_wallet">Delete wallet</string>
    <string name="confirm_delete_wallet">Are you sure you want to delete walelt \'%1$s\'? All transactions recorded on this wallet will also be deleted!</string>
    <string name="delete">Delete</string>
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">septemberr</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="choose_one_wallet">Select only one wallet</string>
    <string name="set_notification_permission_to_get_it">Enable notifications to receive reminders about plans</string>
    <string name="allow">Allow</string>
    <string name="you_turned_notifications_off">You have disabled notifications. You can enable them in the app settings.</string>
    <string name="all_categories">All categories</string>
    <string name="permission_required">Permission required</string>
    <string name="please_allow_accurate_notifications">For notifications to work correctly, please enable precise notifications in settings.</string>
    <string name="open_settings">Go to settings</string>
    <string name="daily_transactions_add_notification">Daily reminder to make purchases</string>
    <string name="daily_notifications_about_plans">Daily notifications about plans</string>
    <string name="type_category_name">Enter category name</string>
    <string name="choose_category_icon">Select category icon</string>
    <string name="please_fill_all_fields">Please fill in all fields</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="sum_must_be_more_than_zero">Sum must be greater than 0</string>
    <string name="you_sure_you_want_to_delete_plan">Are you sure you want to delete the planned expense?</string>
    <string name="choose_category">Select category</string>
    <string name="enter_sum">Enter the amount</string>
    <string name="date">Date: %1$s</string>
    <string name="date_tr_edit">Date: %1$s</string>
    <string name="comment_tr_edit">Comment: %1$s</string>
    <string name="no">no</string>
    <string name="choose_wallet">Select a wallet</string>
    <string name="choose_date_range">Select date range</string>
    <string name="piechart_not_available">The chart is not available. No transactions have been added.</string>
    <string name="no_data">No data</string>
    <string name="transaction_categories">Transaction categories</string>
    <string name="type_wallet_name">Enter the wallet name</string>
    <string name="choose_wallet_icon">Select the wallet icon</string>
    <string name="type_wallet_balance">Enter your wallet balance</string>
    <string name="type_correct_balance">Please enter the correct balance</string>
    <string name="select_date">Select date</string>
    <string name="health">Health</string>
    <string name="leisure">Leisure</string>
    <string name="cafe">Cafe</string>
    <string name="education">Education</string>
    <string name="gift">Gift</string>
    <string name="grocery">Groceries</string>
    <string name="other">Other</string>
    <string name="salary">Salary</string>
    <string name="investments">Investments</string>
    <string name="scholarship">Scholarship</string>
    <string name="cashback">Cashback</string>

    <string-array name="currencies">
        <item>RUB</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string-array name="themes">
        <item>@string/theme_system_default</item>
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </string-array>

    <string name="cash">Cash</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="sum_currency">%d %s</string>
    <string name="wallet_main_info">%s: %s</string>
    <string name="wallet_name_wallet_balance">%s: %s</string>
    <string name="expenses_sum">%s</string>
    <string name="plan_name_sum">%s: %s</string>
    <string name="sum_with_currency">%1$s%2$s</string>
    <string name="overview">Overview</string>
    <string name="notification_settings">Notification settings</string>
    <string name="wallets">Wallets</string>
    <string name="total">Total</string>
    <string name="authorization">Authorization</string>
    <string name="wallet_single">Wallet</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add category</string>
    <string name="add_wallet">Add wallet</string>
    <string name="transactions">Transactions</string>
    <string name="view_history">View History</string>
</resources>